--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "WebApplication1"]
 	path = WebApplication1
-	url = git@github.com:ohritz/lab_sos_webapp1.git
+	url = https://github.com/ohritz/lab_sos_webapp1.git
 [submodule "Common"]
 	path = Common
-	url = git@github.com:ohritz/lab_sos_common.git
+	url = https://github.com/ohritz/lab_sos_common.git
